[package]
name = "yomiagemon"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dashmap = "5.5.1"
dotenv = "0.15.0"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serenity = {version = "0.11.6", features = ["framework", "standard_framework", "voice"] }

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.6", features = ["json"] }
songbird = "0.3.2"
