[package]
name = "yomiagemon"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dashmap = "5.5.3"
dotenv = "0.15.0"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serenity = {version = "0.12.0", features = ["framework", "standard_framework", "voice"] }

tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.23", features = ["json"] }
songbird = "0.4.0"
